# talkbank-doi

./: .gitignore  BATCHALIGN3_KEY_CODE_SNIPPETS.md  CLAUDE.md  EXEC_SUMMARY_BATCHALIGN3_COMPAT.txt  GEMINI.md  Makefile  PORTFOLIO-LOC-SUMMARY.md  PORTFOLIO-REORG-PLAN.md  README.md  README_BATCHALIGN3_COMPAT_DOCS.md  RELEASE-PLAN.md  batchalign3_CLI_COMPAT_SURFACE.md  batchalign3_COMPAT_QUICK_REF.md  chat-corpus-analysis-summary.md  chat-grammar-lint-report.md
analysis/per-speaker-utr-experiment-2026-03-16/: Cargo.toml  PROVENANCE-ca-markers.md  PROVENANCE.md  README.md  ca-overlap-remaining-work.md  next-experiments-plan.md  overlap-encoding-assessment.md  overlap-experiment-catalog.md  overlap-experiment-conditions.md  overlap-experiment-results.md  overlap-markers-assessment.md  overlap-summary-for-brian.md
analysis/per-speaker-utr-experiment-2026-03-16/data/: MEDIA-INVENTORY.md
analysis/per-speaker-utr-experiment-2026-03-16/results/: ca-overlap-audit-summary.md  corrected-results-summary.md  experiment1-bestofboth-20260318-1948.txt  experiment2-asr-quality-20260318-2123.txt  experiment2-asr-quality-20260319-0719.txt  experiment2-log-01.txt  experiment2-log-02.txt  experiment2-log-03.txt  experiment2-log-10.txt  experiment2-log-12.txt  experiment2-log-fusser12.txt  experiment2-log-german050814.txt  experiment2-log-mle28.txt  experiment2-log-patagonia30.txt  experiment2-log-serbian030005.txt  experiment2-log-tbi_n22.txt  experiment2-log-tbi_tb23.txt  experiment3-language-aware-20260319-0621.txt  experiment4-hakka-decomposition-20260319-0908.txt  final-timing-comparison.txt  fuzzy-matching-results.md  onset-accuracy-ca-data-v2.txt  onset-accuracy-ca-data.txt  onset-accuracy-sbcsae-verbose.tsv  onset-accuracy-summary.md  phase6-20260318-1709.txt  (+7 more)
scripts/check-media/: Cargo.toml  README.md
talkbank-doi/: Cargo.toml  README.md
talkbank-doi/src/: audit.rs  cdc.rs  datacite.rs  doi.rs  main.rs  tui.rs
(+622 files in other folders)
