[package]
name = "utr-experiment"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
talkbank-model = { path = "../../talkbank-tools/crates/talkbank-model" }
talkbank-parser = { path = "../../talkbank-tools/crates/talkbank-parser" }
talkbank-direct-parser = { path = "../../talkbank-tools/crates/talkbank-direct-parser" }
batchalign-chat-ops = { path = "../../batchalign3/crates/batchalign-chat-ops" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
